src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>ActivityDate &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Date_Approaching__c</fullName>
        <description>This is used to identify Leads with Activities with due dates approaching within 30 days</description>
        <formula>TODAY() + 30 &gt;  ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Date Approaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>This field tracks the duration for the task in hours</description>
        <inlineHelpText>This field tracks the duration for the task in hours</inlineHelpText>
        <label>Duration Effort (Minutes)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_towards__c</fullName>
        <label>Task towards</label>
        <picklist>
            <picklistValues>
                <fullName>To Our Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Champions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
     </fields>   
     <fields>    
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>